--- a/SchoolProject.Core/Resources/SharedResources.Ar.resx
+++ b/SchoolProject.Core/Resources/SharedResources.Ar.resx
@@ -126,6 +126,12 @@
   <data name="DepartmentIdNotExist" xml:space="preserve">
     <value>القسم غير موجود</value>
   </data>
+  <data name="EmailIsExist" xml:space="preserve">
+    <value>البريد الالكترونى موجود بالفعل</value>
+  </data>
+  <data name="FailedCreateOperation" xml:space="preserve">
+    <value>فشل التسجيل </value>
+  </data>
   <data name="IsExist" xml:space="preserve">
     <value>هذا السجل موجود</value>
   </data>
@@ -135,6 +141,9 @@
   <data name="NotFound" xml:space="preserve">
     <value>غير موجود</value>
   </data>
+  <data name="PasswordNotEqualConfirmPassword" xml:space="preserve">
+    <value>كلمة المرور غير متطابقة</value>
+  </data>
   <data name="Required" xml:space="preserve">
     <value>هذا الحقل مطلوب</value>
   </data>
@@ -143,5 +152,8 @@
   </data>
   <data name="updated" xml:space="preserve">
     <value>تم التعديل بنجاح</value>
+  </data>
+  <data name="UserNameIsExist" xml:space="preserve">
+    <value>اسم المستخدم موجود بالفعل</value>
   </data>
 </root>
