add token and auth

--- a/SchoolProject.Core/Resources/SharedResources.Ar.resx
+++ b/SchoolProject.Core/Resources/SharedResources.Ar.resx
@@ -144,6 +144,12 @@
   <data name="OperationFailed" xml:space="preserve">
     <value>العملية فشلت</value>
   </data>
+  <data name="Password" xml:space="preserve">
+    <value>كلمة المرور</value>
+  </data>
+  <data name="PasswordNotCorrect" xml:space="preserve">
+    <value>اسم المستخدم او كلمة المرور غير صحيحة</value>
+  </data>
   <data name="PasswordNotEqualConfirmPassword" xml:space="preserve">
     <value>كلمة المرور غير متطابقة</value>
   </data>
@@ -156,7 +162,13 @@
   <data name="updated" xml:space="preserve">
     <value>تم التعديل بنجاح</value>
   </data>
+  <data name="UserName" xml:space="preserve">
+    <value>اسم المستخدم</value>
+  </data>
   <data name="UserNameIsExist" xml:space="preserve">
     <value>اسم المستخدم موجود بالفعل</value>
+  </data>
+  <data name="UserNotExist" xml:space="preserve">
+    <value>المستخدم غير موجود</value>
   </data>
 </root>
