--- a/SchoolProject.Core/Resources/SharedResources.En.resx
+++ b/SchoolProject.Core/Resources/SharedResources.En.resx
@@ -144,6 +144,12 @@
   <data name="OperationFailed" xml:space="preserve">
     <value>Operation Failed</value>
   </data>
+  <data name="Password" xml:space="preserve">
+    <value>Password</value>
+  </data>
+  <data name="PasswordNotCorrect" xml:space="preserve">
+    <value>Username Or Password is Incorrect</value>
+  </data>
   <data name="PasswordNotEqualConfirmPassword" xml:space="preserve">
     <value>Passwords Not Matching</value>
   </data>
@@ -156,7 +162,13 @@
   <data name="updated" xml:space="preserve">
     <value>Updated Successfully</value>
   </data>
+  <data name="UserName" xml:space="preserve">
+    <value>username</value>
+  </data>
   <data name="UserNameIsExist" xml:space="preserve">
     <value>the username is already exists</value>
+  </data>
+  <data name="UserNotExist" xml:space="preserve">
+    <value>Username not found</value>
   </data>
 </root>
