Complete Jwt Auth

--- a/SchoolProject.Core/Resources/SharedResources.Ar.resx
+++ b/SchoolProject.Core/Resources/SharedResources.Ar.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="AlgorithmIsWrong" xml:space="preserve">
+    <value>الخوارزمية غير متطابقة</value>
+  </data>
   <data name="created" xml:space="preserve">
     <value>تم الانشاء بنجاح</value>
   </data>
@@ -153,11 +156,23 @@
   <data name="PasswordNotEqualConfirmPassword" xml:space="preserve">
     <value>كلمة المرور غير متطابقة</value>
   </data>
+  <data name="RefreshTokenIsExpired" xml:space="preserve">
+    <value>التوكن منتهى الصلاحية</value>
+  </data>
+  <data name="RefreshTokenIsNotFound" xml:space="preserve">
+    <value>مجدد التوكن غير موجود</value>
+  </data>
   <data name="Required" xml:space="preserve">
     <value>هذا الحقل مطلوب</value>
   </data>
   <data name="success" xml:space="preserve">
     <value>تم بنجاح</value>
+  </data>
+  <data name="TokenIsExpired" xml:space="preserve">
+    <value>التكوكن منتهى الصلاحية</value>
+  </data>
+  <data name="TokenIsNotExpired" xml:space="preserve">
+    <value>التوكن لا يزال صالح للاستخدام</value>
   </data>
   <data name="updated" xml:space="preserve">
     <value>تم التعديل بنجاح</value>
