Added Manage User Claims Endpoint

--- a/SchoolProject.Core/Resources/SharedResources.Ar.resx
+++ b/SchoolProject.Core/Resources/SharedResources.Ar.resx
@@ -135,6 +135,24 @@
   <data name="FailedCreateOperation" xml:space="preserve">
     <value>فشل التسجيل </value>
   </data>
+  <data name="FailedToAddNewClaims" xml:space="preserve">
+    <value>عملية اضافة السمات فشلت</value>
+  </data>
+  <data name="FailedToAddNewRoles" xml:space="preserve">
+    <value>فشلت عملية اضافة صلاحيات للمستخدم</value>
+  </data>
+  <data name="FailedToRemoveOldClaims" xml:space="preserve">
+    <value>عملية حذف السمات فشلت</value>
+  </data>
+  <data name="FailedToRemoveOldRoles" xml:space="preserve">
+    <value>فشلت عملية حذف الصلاحيات للمستخدم</value>
+  </data>
+  <data name="FailedToUpdateClaims" xml:space="preserve">
+    <value>عملية تحديث السمات فشلت</value>
+  </data>
+  <data name="FailedToUpdateUserRoles" xml:space="preserve">
+    <value>فشلت عملية التحديث للمستخدم</value>
+  </data>
   <data name="IsExist" xml:space="preserve">
     <value>هذا السجل موجود</value>
   </data>
@@ -164,6 +182,12 @@
   </data>
   <data name="Required" xml:space="preserve">
     <value>هذا الحقل مطلوب</value>
+  </data>
+  <data name="RoleIsUsed" xml:space="preserve">
+    <value>الرتبة مستخدمة حاليا</value>
+  </data>
+  <data name="RoleNotExist" xml:space="preserve">
+    <value>رتبة المستخدم غير موجودة</value>
   </data>
   <data name="success" xml:space="preserve">
     <value>تم بنجاح</value>
